// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtSegmentedControl Snap render AtSegmentedControl -- props className 1`] = `
<view
  class="at-segmented-control test"
/>
`;

exports[`AtSegmentedControl Snap render AtSegmentedControl -- props current 1`] = `
<view
  class="at-segmented-control"
>
  <view
    class="at-segmented-control__item"
  >
    tab1
  </view>
  <view
    class="at-segmented-control__item"
  >
    tab2
  </view>
  <view
    class="at-segmented-control__item at-segmented-control__item--active"
  >
    tab3
  </view>
</view>
`;

exports[`AtSegmentedControl Snap render AtSegmentedControl -- props customStyle 1`] = `
<view
  class="at-segmented-control"
  style="color: red;"
/>
`;

exports[`AtSegmentedControl Snap render AtSegmentedControl -- props disabled 1`] = `
<view
  class="at-segmented-control at-segmented-control--disabled"
>
  <view
    class="at-segmented-control__item at-segmented-control__item--active"
  >
    tab1
  </view>
  <view
    class="at-segmented-control__item"
  >
    tab2
  </view>
  <view
    class="at-segmented-control__item"
  >
    tab3
  </view>
</view>
`;

exports[`AtSegmentedControl Snap render AtSegmentedControl -- props fontSize 1`] = `
<view
  class="at-segmented-control"
>
  <view
    class="at-segmented-control__item at-segmented-control__item--active"
  >
    tab1
  </view>
  <view
    class="at-segmented-control__item"
  >
    tab2
  </view>
  <view
    class="at-segmented-control__item"
  >
    tab3
  </view>
</view>
`;

exports[`AtSegmentedControl Snap render AtSegmentedControl -- props selectedColor 1`] = `
<view
  class="at-segmented-control"
  style="border-color: #fff;"
>
  <view
    class="at-segmented-control__item at-segmented-control__item--active"
    style="border-color: #fff; background-color: rgb(255, 255, 255);"
  >
    tab1
  </view>
  <view
    class="at-segmented-control__item"
    style="color: rgb(255, 255, 255); border-color: #fff;"
  >
    tab2
  </view>
  <view
    class="at-segmented-control__item"
    style="color: rgb(255, 255, 255); border-color: #fff;"
  >
    tab3
  </view>
</view>
`;

exports[`AtSegmentedControl Snap render AtSegmentedControl -- props values 1`] = `
<view
  class="at-segmented-control"
>
  <view
    class="at-segmented-control__item at-segmented-control__item--active"
  >
    tab1
  </view>
  <view
    class="at-segmented-control__item"
  >
    tab2
  </view>
  <view
    class="at-segmented-control__item"
  >
    tab3
  </view>
</view>
`;

exports[`AtSegmentedControl Snap render initial AtSegmentedControl 1`] = `
<view
  class="at-segmented-control"
/>
`;
